<resources>
    <string name="app_name">CaiNiaoXiaoZu</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home"></string>
    <string name="title_lightbulb"></string>
    <string name="title_add"></string>
    <string name="title_zone"></string>
    <string name="title_me"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_1">学霸风采</string>
    <string name="home_2">精彩解答</string>
</resources>
